2006-04-21  Dave Airlie <airlied@linux.ie>

	* src/radeon.h:
	* src/radeon_dri.c: (RADEONDRICloseScreen),
	(RADEONDRIAllocatePCIGARTTable):
	* src/radeon_driver.c: (RADEONEnterVT), (RADEONLeaveVT):
	Add support for backing up the PCIE GART table on VT switch.
	This makes suspend/resume work a lot better on PCIE cards.


2006-04-04  Eric Anholt  <anholt@FreeBSD.org>

	* man/ati.man:
	* man/radeon.man:
	Bug #5632: Fix up ati.4 to explain that it is a wrapper driver for the
	other three.  While here, touch up radeon.4, and add an authors list
	gleaned from checking copyright headers.

2006-04-01  Alex Deucher  <agd5f@yahoo.com>

	* src/radeon.h:
	* src/radeon_driver.c: (RADEONPreInitModes), (RADEONPreInit),
	(RADEONResetDPI), (RADEONSwitchMode):
	* src/radeon_mergedfb.c: (RADEONMergedFBCalcDPI),
	(RADEONMergedFBSetDpi), (RADEONMergedFBResetDpi):
	* src/radeon_mergedfb.h:
	- Fix dpi when switching from clone to dualhead with MergedFB.
	- Add ConstantDPI option to force a particlar dpi across mode changes
	Both based on Thomas Winischhofer's sis code.

2006-03-27  Benjamin Herrenschmidt  <benh@kernel.crashing.org>

	* src/radeon_driver.c: (RADEONRestoreMemMapRegisters),
	(RADEONInit):
	Fix a regression of my latest fix that broke color tiling on some
	setups. RADEONRestoreMemMapRegisters() must not clear CRTC_OFFSET_CNTL
	and friends unconditionally but only when there is a map change or it
	will clear them after the DRI updates the AGP location, thus turning
	tiling back off on the CRTC.
	Also remove a duplicate call to RADEONInitCommonRegisters().

2006-03-23  Roland Scheidegger  <rscheidegger_lists@hispeed.ch>
	* src/radeon_reg.h:
	* src/radeon_video.c: (RADEONResetVideo), (RADEONDisplayVideo),
	(RADEONPutImage): Use programmable tap coefficients for (hopefully)
	better video image quality when downscaling. Remove unnecessary code
	programming the tap coefficients twice. Disable some code which is
	supposed to improve filtering quality but causes very visible image